--- a/log4net.config
+++ b/log4net.config
@@ -6,7 +6,7 @@
         </layout>
     </appender>
 
-		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+    <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
         <file value="example.log" />
         <encoding value="utf-8" />
         <appendToFile value="true" />
@@ -18,10 +18,28 @@
         </layout>
     </appender>
 
+    <appender name="LeAppender" type="log4net.Appender.LogentriesAppender, LogentriesLog4net">
+
+        <!-- GET THE TOKEN ON THE ACCOUNT PAGE -->
+        <token value="bb61600f-f766-451e-b55f-9204f536a79f" />
+
+        <immediateFlush value="true" />
+        <debug value="true" />
+        <useHttpPut value="false" />
+        <useSsl value="false" />
+        <layout type="log4net.Layout.PatternLayout">
+            <!-- The below pattern has been carefully formatted and optimized-->
+            <!-- to work well with the Logentries.com entry parser. -->
+            <!-- For reference see https://logentries.com/doc/search/. -->
+            <param name="ConversionPattern" value="%d %logger %level% %m%n" />
+        </layout>
+    </appender>
+
     <root>
         <level value="DEBUG" />
         <appender-ref ref="Console" />
         <appender-ref ref="RollingFile" />
+        <appender-ref ref="LeAppender" />
     </root>
 
 </log4net>
