Add Logentries config
Signed-off-by: shulga <a.shulga@samsung.com>

--- a/log4net.config
+++ b/log4net.config
@@ -1,4 +1,4 @@
-<log4net>
+<log4net debug="true">
 
     <appender name="Console" type="log4net.Appender.ConsoleAppender">
         <layout type="log4net.Layout.PatternLayout">
@@ -21,7 +21,7 @@
     <appender name="LeAppender" type="log4net.Appender.LogentriesAppender, LogentriesLog4net">
 
         <!-- GET THE TOKEN ON THE ACCOUNT PAGE -->
-        <token value="bb61600f-f766-451e-b55f-9204f536a79f" />
+        <token value="1573f09e-8531-4ea7-9c63-6b71e1257c2c" />
 
         <immediateFlush value="true" />
         <debug value="true" />
@@ -37,8 +37,8 @@
 
     <root>
         <level value="DEBUG" />
-        <appender-ref ref="Console" />
-        <appender-ref ref="RollingFile" />
+        <!--<appender-ref ref="Console" />-->
+        <!--<appender-ref ref="RollingFile" />-->
         <appender-ref ref="LeAppender" />
     </root>
 
